--- a/index.html
+++ b/index.html
@@ -1,73 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dhruv | Developer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dhruv | Dev Meets Cosmos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     body {
-      background-color: #0f0f0f;
-      color: #f5f5f5;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      padding: 2rem;
-    }
-
-    .container {
-      max-width: 600px;
-    }
-
-    h1 {
-      font-size: 3rem;
-      color: #00ffae;
-    }
-
-    p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
+      font-family: 'Inter', sans-serif;
+      background-color: #0D0D0D;
+      color: #E0E0E0;
       line-height: 1.6;
-      color: #cccccc;
     }
 
-    .tagline {
+    header {
+      text-align: center;
+      padding: 100px 20px 40px;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #00ADB5;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+      color: #AAAAAA;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .section-title {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-bottom: 15px;
+      color: #00ADB5;
+    }
+
+    .quote, .cosmic-line {
       font-style: italic;
-      margin-top: 2rem;
-      font-size: 1rem;
-      color: #888;
+      color: #CCCCCC;
+      margin: 10px 0;
     }
 
-    a {
-      color: #00ffae;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
-
-    a:hover {
-      color: #fff;
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      color: #666;
+      font-size: 0.9rem;
     }
   </style>
 </head>
+
 <body>
-  <div class="container">
+  <header>
     <h1>Hey, I'm Dhruv</h1>
-    <p>Aspiring Web Developer, learning one line of code at a time.</p>
-    <p>Building things with 💻, breaking things with 🧠, and fixing them with ☕.</p>
-    <div class="tagline">
-      “Still in beta, but evolving fast.”
-    </div>
-    <p style="margin-top: 2rem;">
-      <a href="https://github.com/dhrxvthedev" target="_blank">Check out my GitHub</a>
-    </p>
-  </div>
+    <p>Exploring code, curiosity, and the cosmos.</p>
+  </header>
+
+  <section>
+    <h2 class="section-title">About Me</h2>
+    <p>I'm a self-taught web developer currently diving deep into code and the cosmos. I love building beautiful things on the web and questioning reality with the lens of quantum physics and astronomy.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Astronomy & Quantum</h2>
+    <p class="cosmic-line">“I'm fascinated by the fabric of the universe — from collapsing stars to particles that exist and don’t exist at the same time. The deeper we look, the more questions emerge. I don’t want all the answers. I want the wonder.”</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Dhruv. Crafted with stardust and semicolons.</p>
+  </footer>
 </body>
+
 </html>
+
+  
