--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dhruv | Dev Meets Cosmos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -15,52 +15,68 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #0D0D0D;
+      background: linear-gradient(135deg, #0D0D0D, #1A1A2E);
       color: #E0E0E0;
-      line-height: 1.6;
+      line-height: 1.7;
+      scroll-behavior: smooth;
     }
 
     header {
       text-align: center;
-      padding: 100px 20px 40px;
+      padding: 100px 20px 50px;
     }
 
     header h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      color: #00ADB5;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3.5rem;
+      color: #00FFF5;
+      text-shadow: 0 0 10px #00FFF5;
     }
 
     header p {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      color: #AAAAAA;
+      font-size: 1.3rem;
+      margin-top: 15px;
+      color: #B5B5B5;
     }
 
     section {
-      max-width: 800px;
-      margin: 40px auto;
+      max-width: 850px;
+      margin: 60px auto;
       padding: 0 20px;
     }
 
     .section-title {
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: 700;
-      margin-bottom: 15px;
-      color: #00ADB5;
+      color: #00FFF5;
+      border-bottom: 2px solid #00FFF5;
+      display: inline-block;
+      margin-bottom: 25px;
     }
 
-    .quote, .cosmic-line {
-      font-style: italic;
+    p, li {
       color: #CCCCCC;
-      margin: 10px 0;
+      font-size: 1.05rem;
+    }
+
+    ul {
+      margin-top: 10px;
+      padding-left: 20px;
     }
 
     footer {
       text-align: center;
-      padding: 30px 20px;
-      color: #666;
+      padding: 40px 20px;
+      color: #888;
       font-size: 0.9rem;
+    }
+
+    .quote {
+      font-style: italic;
+      color: #AAAAAA;
+      border-left: 3px solid #00FFF5;
+      padding-left: 15px;
+      margin: 30px 0;
     }
   </style>
 </head>
@@ -72,13 +88,39 @@
   </header>
 
   <section>
-    <h2 class="section-title">About Me</h2>
-    <p>I'm a self-taught web developer currently diving deep into code and the cosmos. I love building beautiful things on the web and questioning reality with the lens of quantum physics and astronomy.</p>
+    <h2 class="section-title">Who I Am</h2>
+    <p>I'm not just learning to code — I'm learning how to think, how to question, how to build. Whether it’s shaping pixels into meaning or stargazing with wide eyes, I find joy in connecting the known with the mysterious. My journey is fueled by a hunger to explore, and I’ve only just begun.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">My Curiosities</h2>
+    <ul>
+      <li>How black holes bend time</li>
+      <li>What quantum particles are actually doing</li>
+      <li>Why writing code feels like wielding a spell</li>
+      <li>How light years echo back stories from ancient stars</li>
+      <li>What reality even means</li>
+    </ul>
   </section>
 
   <section>
     <h2 class="section-title">Astronomy & Quantum</h2>
-    <p class="cosmic-line">“I'm fascinated by the fabric of the universe — from collapsing stars to particles that exist and don’t exist at the same time. The deeper we look, the more questions emerge. I don’t want all the answers. I want the wonder.”</p>
+    <p class="quote">“I'm fascinated by the fabric of the universe — from collapsing stars to particles that exist and don’t exist at the same time. The deeper we look, the more questions emerge. I don’t want all the answers. I want the wonder.”</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Chess & Strategy</h2>
+    <p>Chess isn’t just 64 squares — it’s an art of anticipation, discipline, and self-awareness. I’m not chasing titles or trophies; I’m chasing growth. I love studying games, breaking down tactics, and finding beauty in a perfectly timed fork or an unexpected sacrifice. It’s how I train my mind to think deeper, stay patient, and take bold risks.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Wanderlust & Travel</h2>
+    <p>Whether it's trekking through misty mountains or exploring hidden towns, travel is how I unplug from the noise and reconnect with the real world. My goal is to explore the Northeast first — budget trips, local food, raw stories — and let each place leave its mark on who I become.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Looking Ahead</h2>
+    <p>I don't just want to be a developer. I want to craft experiences — things that feel like stardust stitched with logic. Things that make people pause and wonder. Whether it’s building immersive websites, traveling to the corners of India, or digging into the secrets of the cosmos, I want to create something real. Something that stays.</p>
   </section>
 
   <footer>
